<resources>
    <string name="app_name">FragranceCollection</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_perfumer">Perfumer</string>
    <string name="hint_release_year">Release Year</string>
    <string name="hint_notes">Notes</string>
    <string name="add_fragrance">Add Fragrance</string>
    <string name="edit_fragrance">Edit Fragrance</string>
    <string name="fragrance_count">Fragrances In Your Collection:</string>
    <string name="text_edit">Edit</string>
    <string name="choose_fragrance_image">Choose Image</string>
    <string name="success_fragrance_added">Fragrance Added Successfully</string>
    <string name="error_image_not_chosen">Please Choose An Image</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_logout">Logout</string>
    <string name="text_continue">Continue</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Register now</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="account_information">Account Information</string>
    <string name="hint_current_password">Current Password</string>
    <string name="enter_current_password">Enter Current Password To Continue</string>
    <string name="edit_account">Edit Account</string>
    <string name="save_account">Save</string>
    <string name="account_name">Name:</string>
    <string name="account_email">Email:</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="title_activity_fragrance_list">FragranceListActivity</string>
    <string name="nav_fragrance_list">View All</string>
    <string name="nav_add">Add</string>
    <string name="nav_account">Account</string>
    <string name="nav_discover">Discover</string>
</resources>