<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <ScrollView
        android:id="@+id/registerScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addFragranceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_fragrance"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addFragranceNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/addFragrancePerfumerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_perfumer"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/addFragranceReleaseYearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_release_year"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/addFragranceNotesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_notes"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="Choose Image" />

            <ImageButton
                android:id="@+id/addFragranceChooseImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <Button
                android:id="@+id/addFragranceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_fragrance" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

